--- a/css/theme/styeah.css
+++ b/css/theme/styeah.css
@@ -20,7 +20,7 @@ body {
 
 .reveal {
   font-family: "SimHei", sans-serif;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: normal;
   color: #eee; }
 
@@ -57,9 +57,12 @@ body {
   text-transform: uppercase;
   text-shadow: 2px 2px 2px #222;
   word-wrap: break-word; }
+  
+
 
 .reveal h1 {
-  font-size: 3.77em; }
+  padding: 0.2em;
+  font-size: 3em; }
 
 .reveal h2 {
   font-size: 2.11em; }
